# algmz

./: Cargo.toml  tauri.conf.json
cas-seed/assets/: hello.txt
cas-seed/scripts/: main.lua  ui_helpers.lua
src/: cas.rs  lib.rs  lua_host.rs  main.rs
