[package]
name = "algmz"
version = "0.1.0"
description = "Tauri v2 Lua and wasm component runtime with CAS storage"
authors = ["Algmz"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "algmz_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "algmz"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
blake3 = "1"
hex = "0.4"
include_dir = "0.7"
mlua = { version = "0.10", features = ["lua54", "vendored", "send"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
thiserror = "1"
walkdir = "2"
wasmtime = { version = "35", features = ["component-model"] }
